# libopencm3-template

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md  arm-none-eabi-gcc.cmake  freertos.cmake  stm32f4-discovery.ld  sysview.cmake
inc/tasks/: usb.h
lib/FreeRTOSv10.0.1_patched/Source/include/: task.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CM0/: portmacro.h
lib/FreeRTOSv10.0.1_patched/Source/portable/GCC/ARM_CM4F/: portmacro.h
lib/FreeRTOSv9_patched/Source/portable/GCC/ARM_CM0/: portmacro.h
other/utils/: usbBulkEchoTest.py
src/: main.c
src/config/: clock.c  gpio.c
src/freertos/: freertosHooks.c
src/tasks/: init.c  ledblink.c  usb.c
